@@ -98,8 +98,8 @@
               "type": "object",
               "properties": {
                 "on_connect_commands": { "type": "array", "description": "Commands to be run after the connection is established", "items": { "type": "string" } },
-                "state": { "type": "string", "enum": ["connect", "disconnect"], "description": "Connection state" },
-                "url": { "type": "string", "format": "uri", "description": "Example: irc://user:pass@irc.perl.org?nick=superman" }
+                "url": { "type": "string", "format": "uri", "description": "Example: irc://user:pass@irc.perl.org?nick=superman" },
+                "wanted_state": { "type": "string", "enum": ["connected", "disconnected"], "description": "Connection state" }
               }
             }
           }
@@ -605,8 +605,9 @@
         "connection_id": { "type": "string", "description": "Unique identifier for this connection" },
         "name": { "type": "string", "description": "Name for this connection" },
         "on_connect_commands": { "type": "array", "description": "Commands to be run after the connection is established", "items": { "type": "string" } },
-        "state": { "type": "string", "enum": ["connected", "queued", "disconnected"], "description": "Connection state" },
-        "url": { "type": "string", "format": "uri", "description": "Example: irc://user:@irc.perl.org?nick=superman (Note: Without password)" }
+        "state": { "type": "string", "enum": ["connected", "queued", "disconnected"], "description": "Actual connection state" },
+        "url": { "type": "string", "format": "uri", "description": "Example: irc://user:@irc.perl.org?nick=superman (Note: Without password)" },
+        "wanted_state": { "type": "string", "enum": ["connected", "disconnected"], "description": "Wanted connection state" }
       }
     },
     "Dialog": {
